# swc-plugin-istanbul

./: .gitignore  .swcrc  Cargo.toml  DEVELOPMENT.md  README.md  package.json
.github/workflows/: publish-swc-plugin-canyon.yml  publish-swc-plugin-istanbul.yml
playground/: package.json  vite.config.ts
playground/babel/: package.json  test-babel-config.js
playground/babel/src/: file.js
playground/swc/: .gitignore  .swcrc  .swcrc.json  generate-swcrc.js  package.json  test.js
playground/vite/: package.json  vite.config.ts
src/: lib.rs
