[package]

description = "Canyon plugin for debugging."


authors      = ["Travis Zhang <wr.zhang25@gmail.com>"]
edition      = "2021"
homepage     = "https://github.com/canyon-project/canyon"
license      = "MIT"
name         = "swc_plugin_istanbul"
publish      = false
repository   = "https://github.com/canyon-project/canyon.git"
rust-version = "1.70"
version      = "0.18.6"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
swc_core = { version = "0.96.2", features = ["ecma_plugin_transform"] }
serde_json = "1.0.132"
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.8.5"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
