[workspace]
members = [
  "packages/swc-plugin-coverage",
  "packages/swc-coverage-instrument",
]
resolver = "2"

[profile.release]

  [workspace.dependencies]
  swc-coverage-instrument = { path = "./packages/swc-coverage-instrument" }
  getrandom          = { version = "0.2.15" }
  indexmap           = { version = "2.2.6" }
  once_cell          = { version = "1.19.0" }
  serde              = { version = "1.0.203" }
  serde-wasm-bindgen = { version = "0.6.5" }
  serde_json         = { version = "1.0.120" }
  swc_atoms          = { version = "9.0.0" }
  swc_core           = { version = "50.0.0" }
  tracing            = { version = "0.1.37" }
  tracing-subscriber = { version = "0.3.17" }
  typed-path         = { version = "0.11.0" }
  wasm-bindgen       = { version = "0.2.92" }
  wax                = { version = "0.6.0" }
